# ProjetoIA

./: pyproject.toml
config/: agents.yaml  tasks.yaml
db/: chroma.sqlite3
src/: crew.py  main.py  streamlit_app.py  tasks.py
src/projetoia/: agents.py  crew.py  streamlit_app.py
tools/: calculator_tools.py
