[project]
name = "projetoia"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo Henrique",email = "dudugama03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12.5,<3.13"
langchain-openai = ">=0.2.1,<0.3.0"
dependencies = [
    "crewai (>=0.114.0,<0.115.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "crewai[tools] (>=0.114.0,<0.115.0)",   
    "langchain-openai (>=0.2.1,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
